confirmo nuevo module

--- a/estilo.scss
+++ b/estilo.scss
@@ -86,8 +86,8 @@ $amarillo: yellow;
 }
 
 
-.body {
-	background-image: url("multimedia/resumen11.9.jpg");
+body {
+	background-color: red;
 	font-family: 'Open Sans', sans-serif;
 }
 
