--- a/estilos.css
+++ b/estilos.css
@@ -33,8 +33,8 @@
   justify-content: space-between;
   flex-direction: row; }
 
-.body {
-  background-image: url("multimedia/resumen11.9.jpg");
+body {
+  background-color: red;
   font-family: 'Open Sans', sans-serif; }
 
 .a {
