--- a/estilos.css
+++ b/estilos.css
@@ -7,7 +7,7 @@
   transition-duration: .5s; }
 
 .zoom:hover {
-  transform: scale(1.15); }
+  transform: scale(1.07); }
 
 .violeta {
   background-image: linear-gradient(to right, rgba(165, 69, 69, 0.753), #640101); }
@@ -19,7 +19,7 @@
   justify-content: space-around; }
 
 .margenBot {
-  margin-bottom: 20px; }
+  margin-bottom: 50px; }
 
 .m0p0 {
   margin: 0px;
@@ -34,8 +34,18 @@
   flex-direction: row; }
 
 body {
-  background-color: red;
+  background-color: #1c021f;
   font-family: 'Open Sans', sans-serif; }
+
+div {
+  background-color: #260430;
+  color: lightgray; }
+
+nav {
+  background-color: #330641; }
+
+.bordeSolido {
+  border: 4px solid #0c0114; }
 
 .a {
   text-decoration: none; }
@@ -43,10 +53,15 @@ body {
 a:hover {
   text-decoration: none; }
 
+.grisesito {
+  color: lightgray;
+  background-color: #260430; }
+
 .fondoPrincipal {
   width: 100%;
   height: calc(70vh - 1rem);
-  background-image: url("multimedia/vlad.jpg"); }
+  background-image: url("multimedia/vlad.jpg");
+  padding: 0px; }
   .fondoPrincipal .fondo__titulo {
     max-width: 1000px;
     margin: 0px;
@@ -75,7 +90,8 @@ a:hover {
 .contenedor {
   max-width: 1000px;
   width: 90%;
-  margin: 0 auto; }
+  margin: 0 auto;
+  padding: 60px; }
   .contenedor .tarj {
     background-image: linear-gradient(rgba(221, 201, 25, 0.76), #ffa600);
     border-radius: 15px;
@@ -136,7 +152,8 @@ a:hover {
 .intro {
   align-items: center;
   text-align: center;
-  padding: 40px; }
+  padding: 20px;
+  margin-top: 40px; }
   .intro .texto__titulo {
     font-size: 40px;
     font-weight: 500px;
@@ -156,9 +173,9 @@ a:hover {
 .ress {
   width: 980px;
   height: 551px;
-  transform: translateX(45%);
+  transform: translateX(40%);
   background-image: url("multimedia/resumen11.9.jpg");
-  margin: 0px;
+  margin: 50px;
   padding: 0px;
   border: 0px;
   margin-bottom: 20px; }
@@ -166,9 +183,9 @@ a:hover {
 .tierGeneral {
   width: 980px;
   height: 2120px;
-  transform: translateX(45%);
+  transform: translateX(40%);
   background-image: url("multimedia/tierlist.jpg");
-  margin: 0px;
+  margin: 50px;
   padding: 0px;
   border: 0px;
   margin-bottom: 20px; }
@@ -200,8 +217,7 @@ a:hover {
     text-align: center; }
 
 footer {
-  background-color: aqua;
-  height: 30rem; }
+  height: 25rem; }
 
 .colIzq {
   padding: 10px;
