--- a/estilos.css
+++ b/estilos.css
@@ -9,11 +9,17 @@
 .zoom:hover {
   transform: scale(1.07); }
 
+nav {
+  background-color: #330641; }
+
 .violeta {
   background-image: linear-gradient(to right, rgba(165, 69, 69, 0.753), #640101); }
 
 .centrar {
-  text-align: center; }
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  align-items: center; }
 
 .centrado {
   justify-content: space-around; }
@@ -41,9 +47,6 @@ div {
   background-color: #260430;
   color: lightgray; }
 
-nav {
-  background-color: #330641; }
-
 .bordeSolido {
   border: 4px solid #0c0114; }
 
@@ -60,7 +63,7 @@ a:hover {
 .fondoPrincipal {
   width: 100%;
   height: calc(70vh - 1rem);
-  background-image: url("multimedia/vlad.jpg");
+  background-image: url("multimedia/vladfull.jpg");
   padding: 0px; }
   .fondoPrincipal .fondo__titulo {
     max-width: 1000px;
@@ -171,10 +174,6 @@ a:hover {
     padding: 20px; }
 
 .ress {
-  width: 980px;
-  height: 551px;
-  transform: translateX(40%);
-  background-image: url("multimedia/resumen11.9.jpg");
   margin: 50px;
   padding: 0px;
   border: 0px;
@@ -225,21 +224,36 @@ footer {
 
 .fTitulos {
   font-weight: 600;
-  font-size: 14px;
+  font-size: 16px;
   padding: 12px; }
 
 .pad20 {
   padding: 10px;
   font-size: 14px; }
 
+.margenTop {
+  margin-top: 40px; }
+
+.m0 {
+  margin: 0px; }
+
+.colorNegroT {
+  color: black;
+  font-weight: 600;
+  font-size: 20px; }
+
+.colorNegro {
+  color: black;
+  font-weight: 300; }
+
 .gold {
   background-color: gold; }
 
 .silver {
-  background-color: silver; }
+  background-color: #dadada; }
 
 .bronce {
-  background-color: darkgoldenrod; }
+  background-color: #8f6f1f; }
 
 .fondoTop {
   width: 100%;
@@ -275,6 +289,10 @@ footer {
     transform: translateX(45%);
     align-items: center;
     text-align: center; }
+
+.runasybuild {
+  display: flex;
+  flex-direction: row; }
 
 .fondoJg {
   width: 100%;
