--- a/estilo.scss
+++ b/estilo.scss
@@ -19,33 +19,6 @@ $amarillo: rgb(30, 8, 70);
 
 // mixins 
 
-@mixin tituloBanner {   // Titulo de portada
-        max-width: 1000px;
-        margin: 0px;
-        padding: 0xp;
-        border: 0px;
-        font-family: 'Cinzel', serif;
-        font-size: 60px;
-        color: white;
-        position: relative;
-        top: 15%;
-        left: 10%;
-        transform: translateY(350%);
-    }
-
-@mixin subtituloBanner { //Subtitulo de portada 
-    max-width: 1000px;
-    margin: 0px;
-    padding: 0xp;
-    border: 0px;
-    font-family: 'Cinzel', serif;
-    font-size: 40px;
-    color: white;
-    position: relative;
-    top: 15%;
-    left: 7%;
-    transform: translateY(500%);
-}
 
 @mixin caja { //  caja de texto/elementos
     width: 62rem;
@@ -60,7 +33,13 @@ $amarillo: rgb(30, 8, 70);
 
 nav {
     background-color: rgb(51, 6, 65);
+    color: white;
 }
+
+.blanco {
+    color: white;
+}
+
 
 .violeta {
     background-image: linear-gradient(to right, rgba(165, 69, 69, 0.753) , rgb(100, 1, 1));
@@ -110,10 +89,13 @@ div {
     border: 4px solid rgb(12, 1, 20);
 }
 
-.a {
+a {
 	text-decoration: none;
+    color: white;
 }
-
+.nav-item {
+    color: white;
+}
 a:hover {
 	text-decoration: none;
 }
@@ -133,13 +115,6 @@ a:hover {
     padding: 0px;
 
 
-    .fondo__titulo {
-        @include tituloBanner;
-    }
-
-    .fondo__subtitulo {
-        @include subtituloBanner;
-    }
 
 }
 
@@ -230,13 +205,17 @@ a:hover {
 // Texto principal (bajo banner)
 
 .intro {
-    align-items: center;
-    text-align: center;
+    width: 60%;
+    height: 20%;
+    display: flex;
+    justify-content: center;
     padding: 20px;
-    margin-top: 40px;
+    margin: 40px auto;
+    
+
 
     .texto__titulo {
-        font-size: 40px;
+        font-size: 2rem;
         font-weight: 500px;
         text-align:center;
         font-family: 'Roboto', sans-serif;
@@ -247,13 +226,14 @@ a:hover {
         display: block;
         justify-content: flex-start;
         font-weight: 300;
-        font-size: 25px;
+        font-size: 1.2rem;
         text-align: center;
         list-style-type: disc;
     }
 
     .botones {
         padding: 20px;
+        margin: 20px;
     }
 }
 
@@ -286,8 +266,8 @@ a:hover {
 }
 
 .comms {
-    width: 980px;
-    height: 500px;
+    width: 60%;
+    height: 20%;
     transform: translateX(45%);
     align-items: center;
     text-align: center;
@@ -314,6 +294,9 @@ a:hover {
 
 footer {
     height: 25rem;
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: center;
 }
 
 .colIzq {
@@ -338,13 +321,6 @@ footer {
 .m0 {
     margin: 0px;
 }
-
-
-
-
-
-
-
 
 // CARDS
 
@@ -381,15 +357,13 @@ footer {
     width: 100%;
     height: calc(70vh - 40px);
     background-image: url("multimedia/urgot.jpg");
+.fade {
+    z-index: 1;
+    width: 100%;
+    height: calc(70vh - 40px);
+    background-image: linear-gradient(to top, #160D33 0%, rgba(25, 19, 61, 0) 100%);
+}
 
-
-    .top__titulo {
-        @include tituloBanner;
-    }
-
-    .top__subtitulo {
-    @include subtituloBanner;
-        }
 
 
     .comms {
@@ -414,14 +388,6 @@ footer {
     height: calc(70vh - 40px);
     background-image: url("multimedia/kayn.jpg");
 
-
-    .jg__titulo {
-        @include tituloBanner;
-    }
-
-    .jg__subtitulo {
-        @include subtituloBanner;
-    }
 }
 
 // MID
@@ -430,15 +396,6 @@ footer {
     width: 100%;
     height: calc(70vh - 40px);
     background-image: url("multimedia/syndra.jpg");
-
-
-    .mid__titulo {
-        @include tituloBanner;
-    }
-
-    .mid__subtitulo {
-        @include subtituloBanner;
-    }
 }
 // BOT
 
@@ -446,28 +403,68 @@ footer {
     width: 100%;
     height: calc(70vh - 40px);
     background-image: url("multimedia/kalista.jpg");
-
-    .bot__titulo {
-        @include tituloBanner;
-    }
-
-    .bot__subtitulo {
-        @include subtituloBanner;
-    }
 }
+
 // SUPP
 
     .fondoSupp {
         width: 100%;
         height: calc(70vh - 40px);
         background-image: url("multimedia/thresh.jpg");
-
-
-    .supp__titulo {
-        @include tituloBanner;
-    }
-
-    .supp__subtitulo {
-        @include subtituloBanner;
-    }
 }
+
+//NAV 
+
+li, p {
+    font-family: 'ProximaNova-regular', sans-serif;
+    font-weight: 400;
+    font-size: 13px;
+    color: #edf0f1;
+    text-decoration: none;
+    margin: 0;
+  }
+  
+  p {
+    margin: 5px;
+  }
+  
+  .header {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    padding: 0 5%;
+    background-color:rgb(28, 2, 31);
+    top: 0;
+    width: 100%;
+    z-index: 1;
+  }
+
+  img {
+    width: 100%;
+  }
+  
+  .nav_logo {
+    cursor: pointer;
+    margin-right: 5px;
+    width: 10%;
+  }
+  
+  .nav_links {
+    list-style: none;
+    margin: 5px 0 10px;
+  }
+  
+  .nav_links li {
+    display: inline-block;
+    padding: 0px 20px;
+  }
+  
+  .nav_links li {
+    transition: all 0.3s ease 0s;
+  }
+  
+  .nav_links li:hover {
+    color: #0088a9;
+    transition: all 0.3s ease 0s;
+    cursor: pointer;
+  }
