--- a/estilos.css
+++ b/estilos.css
@@ -10,7 +10,11 @@
   transform: scale(1.07); }
 
 nav {
-  background-color: #330641; }
+  background-color: #330641;
+  color: white; }
+
+.blanco {
+  color: white; }
 
 .violeta {
   background-image: linear-gradient(to right, rgba(165, 69, 69, 0.753), #640101); }
@@ -50,8 +54,12 @@ div {
 .bordeSolido {
   border: 4px solid #0c0114; }
 
-.a {
-  text-decoration: none; }
+a {
+  text-decoration: none;
+  color: white; }
+
+.nav-item {
+  color: white; }
 
 a:hover {
   text-decoration: none; }
@@ -65,30 +73,6 @@ a:hover {
   height: calc(70vh - 1rem);
   background-image: url("multimedia/vladfull.jpg");
   padding: 0px; }
-  .fondoPrincipal .fondo__titulo {
-    max-width: 1000px;
-    margin: 0px;
-    padding: 0xp;
-    border: 0px;
-    font-family: 'Cinzel', serif;
-    font-size: 60px;
-    color: white;
-    position: relative;
-    top: 15%;
-    left: 10%;
-    transform: translateY(350%); }
-  .fondoPrincipal .fondo__subtitulo {
-    max-width: 1000px;
-    margin: 0px;
-    padding: 0xp;
-    border: 0px;
-    font-family: 'Cinzel', serif;
-    font-size: 40px;
-    color: white;
-    position: relative;
-    top: 15%;
-    left: 7%;
-    transform: translateY(500%); }
 
 .contenedor {
   max-width: 1000px;
@@ -153,12 +137,14 @@ a:hover {
     bottom: -25px; }
 
 .intro {
-  align-items: center;
-  text-align: center;
+  width: 60%;
+  height: 20%;
+  display: flex;
+  justify-content: center;
   padding: 20px;
-  margin-top: 40px; }
+  margin: 40px auto; }
   .intro .texto__titulo {
-    font-size: 40px;
+    font-size: 2rem;
     font-weight: 500px;
     text-align: center;
     font-family: 'Roboto', sans-serif;
@@ -167,11 +153,12 @@ a:hover {
     display: block;
     justify-content: flex-start;
     font-weight: 300;
-    font-size: 25px;
+    font-size: 1.2rem;
     text-align: center;
     list-style-type: disc; }
   .intro .botones {
-    padding: 20px; }
+    padding: 20px;
+    margin: 20px; }
 
 .ress {
   margin: 50px;
@@ -197,8 +184,8 @@ a:hover {
   text-align: center; }
 
 .comms {
-  width: 980px;
-  height: 500px;
+  width: 60%;
+  height: 20%;
   transform: translateX(45%);
   align-items: center;
   text-align: center; }
@@ -216,7 +203,10 @@ a:hover {
     text-align: center; }
 
 footer {
-  height: 25rem; }
+  height: 25rem;
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: center; }
 
 .colIzq {
   padding: 10px;
@@ -259,30 +249,11 @@ footer {
   width: 100%;
   height: calc(70vh - 40px);
   background-image: url("multimedia/urgot.jpg"); }
-  .fondoTop .top__titulo {
-    max-width: 1000px;
-    margin: 0px;
-    padding: 0xp;
-    border: 0px;
-    font-family: 'Cinzel', serif;
-    font-size: 60px;
-    color: white;
-    position: relative;
-    top: 15%;
-    left: 10%;
-    transform: translateY(350%); }
-  .fondoTop .top__subtitulo {
-    max-width: 1000px;
-    margin: 0px;
-    padding: 0xp;
-    border: 0px;
-    font-family: 'Cinzel', serif;
-    font-size: 40px;
-    color: white;
-    position: relative;
-    top: 15%;
-    left: 7%;
-    transform: translateY(500%); }
+  .fondoTop .fade {
+    z-index: 1;
+    width: 100%;
+    height: calc(70vh - 40px);
+    background-image: linear-gradient(to top, #160D33 0%, rgba(25, 19, 61, 0) 100%); }
   .fondoTop .comms {
     width: 62rem;
     height: 25rem;
@@ -298,114 +269,63 @@ footer {
   width: 100%;
   height: calc(70vh - 40px);
   background-image: url("multimedia/kayn.jpg"); }
-  .fondoJg .jg__titulo {
-    max-width: 1000px;
-    margin: 0px;
-    padding: 0xp;
-    border: 0px;
-    font-family: 'Cinzel', serif;
-    font-size: 60px;
-    color: white;
-    position: relative;
-    top: 15%;
-    left: 10%;
-    transform: translateY(350%); }
-  .fondoJg .jg__subtitulo {
-    max-width: 1000px;
-    margin: 0px;
-    padding: 0xp;
-    border: 0px;
-    font-family: 'Cinzel', serif;
-    font-size: 40px;
-    color: white;
-    position: relative;
-    top: 15%;
-    left: 7%;
-    transform: translateY(500%); }
 
 .fondoMid {
   width: 100%;
   height: calc(70vh - 40px);
   background-image: url("multimedia/syndra.jpg"); }
-  .fondoMid .mid__titulo {
-    max-width: 1000px;
-    margin: 0px;
-    padding: 0xp;
-    border: 0px;
-    font-family: 'Cinzel', serif;
-    font-size: 60px;
-    color: white;
-    position: relative;
-    top: 15%;
-    left: 10%;
-    transform: translateY(350%); }
-  .fondoMid .mid__subtitulo {
-    max-width: 1000px;
-    margin: 0px;
-    padding: 0xp;
-    border: 0px;
-    font-family: 'Cinzel', serif;
-    font-size: 40px;
-    color: white;
-    position: relative;
-    top: 15%;
-    left: 7%;
-    transform: translateY(500%); }
 
 .fondoBot {
   width: 100%;
   height: calc(70vh - 40px);
   background-image: url("multimedia/kalista.jpg"); }
-  .fondoBot .bot__titulo {
-    max-width: 1000px;
-    margin: 0px;
-    padding: 0xp;
-    border: 0px;
-    font-family: 'Cinzel', serif;
-    font-size: 60px;
-    color: white;
-    position: relative;
-    top: 15%;
-    left: 10%;
-    transform: translateY(350%); }
-  .fondoBot .bot__subtitulo {
-    max-width: 1000px;
-    margin: 0px;
-    padding: 0xp;
-    border: 0px;
-    font-family: 'Cinzel', serif;
-    font-size: 40px;
-    color: white;
-    position: relative;
-    top: 15%;
-    left: 7%;
-    transform: translateY(500%); }
 
 .fondoSupp {
   width: 100%;
   height: calc(70vh - 40px);
   background-image: url("multimedia/thresh.jpg"); }
-  .fondoSupp .supp__titulo {
-    max-width: 1000px;
-    margin: 0px;
-    padding: 0xp;
-    border: 0px;
-    font-family: 'Cinzel', serif;
-    font-size: 60px;
-    color: white;
-    position: relative;
-    top: 15%;
-    left: 10%;
-    transform: translateY(350%); }
-  .fondoSupp .supp__subtitulo {
-    max-width: 1000px;
-    margin: 0px;
-    padding: 0xp;
-    border: 0px;
-    font-family: 'Cinzel', serif;
-    font-size: 40px;
-    color: white;
-    position: relative;
-    top: 15%;
-    left: 7%;
-    transform: translateY(500%); }
+
+li, p {
+  font-family: 'ProximaNova-regular', sans-serif;
+  font-weight: 400;
+  font-size: 13px;
+  color: #edf0f1;
+  text-decoration: none;
+  margin: 0; }
+
+p {
+  margin: 5px; }
+
+.header {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 0 5%;
+  background-color: #1c021f;
+  top: 0;
+  width: 100%;
+  z-index: 1; }
+
+img {
+  width: 100%; }
+
+.nav_logo {
+  cursor: pointer;
+  margin-right: 5px;
+  width: 10%; }
+
+.nav_links {
+  list-style: none;
+  margin: 5px 0 10px; }
+
+.nav_links li {
+  display: inline-block;
+  padding: 0px 20px; }
+
+.nav_links li {
+  transition: all 0.3s ease 0s; }
+
+.nav_links li:hover {
+  color: #0088a9;
+  transition: all 0.3s ease 0s;
+  cursor: pointer; }
