--- a/estilo.scss
+++ b/estilo.scss
@@ -234,6 +234,9 @@ a:hover {
     .botones {
         padding: 20px;
         margin: 20px;
+        align-items: center;
+        display: flex;
+        justify-content: center;
     }
 }
 
@@ -349,6 +352,12 @@ footer {
 
 // Video informativo
 
+.experto {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+}
 
 
 // TOP
@@ -418,7 +427,6 @@ footer {
 li, p {
     font-family: 'ProximaNova-regular', sans-serif;
     font-weight: 400;
-    font-size: 13px;
     color: #edf0f1;
     text-decoration: none;
     margin: 0;
@@ -439,9 +447,6 @@ li, p {
     z-index: 1;
   }
 
-  img {
-    width: 100%;
-  }
   
   .nav_logo {
     cursor: pointer;
