nueva nav bar y footer

--- a/estilo.scss
+++ b/estilo.scss
@@ -325,6 +325,16 @@ footer {
     margin: 0px;
 }
 
+.discord {
+    display: inline;
+    justify-content: center;
+}
+
+.redes {
+    display: inline;
+    justify-content: start;
+}
+
 // CARDS
 
 .colorNegroT {
