--- a/estilos.css
+++ b/estilos.css
@@ -230,6 +230,14 @@ footer {
 .m0 {
   margin: 0px; }
 
+.discord {
+  display: inline;
+  justify-content: center; }
+
+.redes {
+  display: inline;
+  justify-content: start; }
+
 .colorNegroT {
   color: black;
   font-weight: 600;
