--- a/estilo.scss
+++ b/estilo.scss
@@ -6,6 +6,9 @@
 
 //variables
 $amarillo: rgb(30, 8, 70);
+$rojo: red;
+$verde: green;
+
 
 // animaciones 
 
@@ -21,8 +24,12 @@ $amarillo: rgb(30, 8, 70);
 
 // ID's
 
-#coachMain {
-    position:relative;
+#precios {
+    display: flex;
+    width: 100%;
+    justify-content: space-around;
+    transform: rotateX(50%);
+    
 }
 
 #flechita {
@@ -55,7 +62,11 @@ nav {
     color: white;
 }
 
+.foto {
+transform: scale(3);
+transform: rotateX(10%);
 
+}
 .violeta {
     background-image: linear-gradient(to right, rgba(165, 69, 69, 0.753) , rgb(100, 1, 1));
 }
@@ -64,10 +75,12 @@ nav {
     justify-content: center;
     text-align: center;
     align-items: center;
+    padding: 0px;
+    margin: 0px;
 }
 
 .centrado {
-    justify-content: space-around;
+    text-align: center;
 }
 
 .margenBot {
@@ -98,10 +111,19 @@ div {
     background-color: rgb(38, 4, 48);
 
     color: lightgray;
+
 }
 
 .bordeSolido {
     border: 4px solid rgb(12, 1, 20);
+}
+
+.bordeRojo {
+    border: 2px solid red;
+}
+
+.bordeVerde {
+    border: 2px solid green;
 }
 
 a {
@@ -255,6 +277,10 @@ a:hover {
     }
 }
 
+.soloIntro {
+    margin-top: 160px;
+}
+
 //resumen del parche FOTO
 
 .ress {
@@ -315,6 +341,8 @@ footer {
     display: flex;
     flex-wrap: nowrap;
     justify-content: center;
+    
+    
 }
 
 .colIzq {
@@ -358,6 +386,13 @@ footer {
     font-size: 20px;
 }
 
+.colorBlancoT {
+    color: rgb(255, 255, 255);
+    font-weight: 600;
+    font-size: 20px;
+    text-align: center;
+}
+
 .colorNegro {
     color: black;
     font-weight: 300;
@@ -388,6 +423,62 @@ footer {
     height: 100%;
 }
 
+
+// Seccion coaching
+
+.turboMain {
+    background-color: rgb(38, 4, 48);
+
+    color: lightgray;
+
+    border: 4px solid rgb(12, 1, 20);
+
+    width: 60%;
+    height: 80%;
+    padding: 40px;
+
+    
+}
+.gridContainer {
+    display: grid;
+    grid-template-columns: auto auto auto;
+    justify-content: space-around;
+
+.margencito {
+    margin: 20px;
+    line-height: 1.5;
+    padding: 20px;
+    
+    
+    img {
+        float: left;
+        margin-right: 15px;
+    }
+}
+
+
+}
+
+.tituloCounters {
+    position: absolute;
+    justify-content: space-around;
+    margin: 0px;
+    padding: 0px;
+    transform: translateX(55%);
+    font-size: 30px;
+    font-weight: 500px;
+    text-align:center;
+    font-family: 'Roboto', sans-serif;
+
+}
+
+.rojo {
+    color: $rojo;
+}
+
+.verde {
+    color: $verde;
+}
 
 // TOP
 
@@ -451,54 +542,3 @@ footer {
         background-image: url("multimedia/thresh.jpg");
 }
 
-//NAV 
-
-li, p {
-    font-family: 'ProximaNova-regular', sans-serif;
-    font-weight: 400;
-    color: #edf0f1;
-    text-decoration: none;
-    margin: 0;
-  }
-  
-  p {
-    margin: 5px;
-  }
-  
-  .header {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    padding: 0 5%;
-    background-color:rgb(28, 2, 31);
-    top: 0;
-    width: 100%;
-    z-index: 1;
-  }
-
-  
-  .nav_logo {
-    cursor: pointer;
-    margin-right: 5px;
-    width: 10%;
-  }
-  
-  .nav_links {
-    list-style: none;
-    margin: 5px 0 10px;
-  }
-  
-  .nav_links li {
-    display: inline-block;
-    padding: 0px 20px;
-  }
-  
-  .nav_links li {
-    transition: all 0.3s ease 0s;
-  }
-  
-  .nav_links li:hover {
-    color: #0088a9;
-    transition: all 0.3s ease 0s;
-    cursor: pointer;
-  }
