--- a/estilo.scss
+++ b/estilo.scss
@@ -55,8 +55,8 @@ $verde: green;
 
 //nav bar
 
-nav {
-    background-color: rgb(51, 6, 65);
+.navColor {
+    background-color: rgb(28, 2, 31);
     color: white;
 }
 
@@ -597,6 +597,16 @@ footer {
 
 // MEDIA QUERYS
 
+
+@media screen and (max-width: 1400px)
+{
+    .gridContainer2 {
+        width: 60%;
+        display: grid;
+        grid-template-columns: auto;
+    }
+}
+
 @media screen and (max-width: 800px)
 {
     .intro {
@@ -641,7 +651,8 @@ font-size: 5px;
 
 .segundaColumna {
     display: grid;
-    grid-template-columns: 20% 20% 20% 20% 20% ;
+    grid-template-columns: 25% 25% 25% ;
+    font-size: 1px;
 }
 
 .col-10 {
@@ -651,18 +662,32 @@ font-size: 5px;
 #grideano{
     width: 100%;
     display: grid;
-    grid-template-columns: auto;
+    grid-template-columns: 100%;
+    font-size: 20px;
 }
 nav {
     width: 100%;
 }
+
+.soloIntro {
+    margin-top: 0px;
 }
 
-@media screen and (max-width: 1400px)
-{
-    .gridContainer2 {
-        width: 60%;
-        display: grid;
-        grid-template-columns: auto;
-    }
+.tarj__foto {
+display: none;
 }
+.zoom {
+    display: none;
+}
+
+#leesin {
+    display: none;
+}
+
+
+.fondoPrincipal {
+    height: calc(90vh - 3rem);
+}
+}
+
+//NAV DOS
